# findata-fetcher

./: .bumpversion.toml  .envrc  .gitignore  DEV.md  Justfile  Pipfile  README.md  TODO.md  config.json.example  lefthook.yml  package-lock.json  package.json  pyproject.toml  pythonrc.py  repl.py  setup.cfg  vulture_allowlist.py
.github/workflows/: codeql-analysis.yml
fetcher/: bcge.py  bcgecc.py  contextextra.py  coop.py  coop_supercard.py  cs.py  dateutils.py  degiro.py  driverutils.py  easyride.py  emailutils.py  fileutils.py  finpension.py  galaxus.py  gmail.py  google_play_mail.py  ib.py  ibplaywright.py  mbank.py  mbankspa.js  op.py  patreon.py  playwrightutils.py  revolut.py  revolut_mail.py  splitwise.py  tool.py  ubereats.py
test/: fake_inbox.py  file_extra.py  test_bcge.py  test_coop_supercard.py  test_cs.py  test_dateutils.py  test_degiro.py  test_driverutils.py  test_emailuils.py  test_galaxus.py  test_google_play_mail.py  test_ib.py  test_mbank.py  test_op.py  test_playwrightutils.py  test_revolut.py  test_tool.py
test/data/: galaxus-payload-2023-04-12.txt  google-play-mail-2023-05-04-bytes.email  google-play-mail-2023-05-04-contents.txt  ib-wire-instructions.csv  mbank-transactions-2023-04-30-output.csv  mbank-transactions-2023-04-30.csv
