[project]
name = "findata-fetcher"
version = "11.0.0"
description = "A tool that downloads financial statements from various sites."
authors = [{ name = "Grzegorz Milka", email = "grzegorzmilka@gmail.com" }]
requires-python = ">=3.13.1"
readme = "README.md"
license = { "text" = "AGPL-3.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  # Not 8.1.4 or 8.1.5, because https://github.com/pallets/click/issues/2558
  "click>=8.1.8,<9",
  "CurrencyConverter>=0.17,<0.18",
  "onepassword",
  "playwright>=1.49.0,<2",
  # Needs to be at least 2.31: https://github.com/gregorias/findata-fetcher/pull/4.
  "requests>=2.32.3,<3",
  "selenium>=4.14.0,<5",
  "setuptools>=70,<71",
  "splitwise>=3.0.0,<4",
]

[project.urls]
Repository = "https://github.com/gregorias/findata-fetcher"

[project.scripts]
findata-fetcher = "fetcher.tool:main"

[dependency-groups]
dev = [
  "types-beautifulsoup4~=4.12",
  "types-requests~=2.32",
  "autopep8",
  "mypy~=1.11",
  "packaging",
  "rope",
  "validate-pyproject>=0.24.1",
]

[tool.uv]

[tool.uv.sources]
# Use 0.1.1 until https://github.com/1Password/onepassword-sdk-python/issues/108 is resolved.
onepassword = { git = "https://github.com/1Password/onepassword-sdk-python.git", tag = "v0.1.1" }

[tool.hatch.build.targets.sdist]
include = ["fetcher"]

[tool.hatch.build.targets.wheel]
include = ["fetcher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
