[project]
name = "findata-fetcher"
version = "12.2.3"
description = "A tool that downloads financial statements from various sites."
authors = [{ name = "Grzegorz Milka", email = "grzegorzmilka@gmail.com" }]
requires-python = ">=3.13.7"
readme = "README.md"
license = { "text" = "AGPL-3.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4>=4.13.5,<5",
  # Not 8.1.4 or 8.1.5, because https://github.com/pallets/click/issues/2558
  "click>=8.2.1,<9",
  "CurrencyConverter>=0.18,<0.19",
  # For a changelog with breaking changes:
  # https://github.com/1Password/onepassword-sdk-python/releases
  "onepassword-sdk==0.3.1",
  "playwright>=1.55.0,<2",
  "setuptools>=70,<81",
  "splitwise>=3.0.0,<4",
]

[project.urls]
Repository = "https://github.com/gregorias/findata-fetcher"

[project.scripts]
findata-fetcher = "fetcher.tool:main"

[dependency-groups]
dev = [
  "types-beautifulsoup4~=4.12",
  "types-requests~=2.32",
  "autopep8",
  "mypy~=1.18",
  "packaging",
  "rope",
  "validate-pyproject>=0.24.1",
  "coverage>=7.8.0",
]

[tool.uv]

[tool.hatch.build.targets.sdist]
include = ["fetcher"]

[tool.hatch.build.targets.wheel]
include = ["fetcher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
