[metadata]
name = findata-fetcher
version = 2.1.0
author = Grzegorz Milka
author_email = gmilka91@gmail.com
description = A tool that downloads financial statements from various sites.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gregorias/findata-fetcher
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  Operating System :: OS Independent

[options]
packages =
  fetcher
python_requires = >=3.9
install_requires =
  beautifulsoup4
  click
  requests
  selenium
  selenium-wire
  splitwise

[options.entry_points]
console_scripts =
  findata-fetcher = fetcher.tool:main
